--- a/src/arrow.html
+++ b/src/arrow.html
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="ds.js"></script>
     <script type="text/javascript" src="dom.js"></script>
     <script type="text/javascript" src="bezier.js"></script>
-    <!-- <script type="text/javascript" src="arrow.js"></script> -->
+    <script type="text/javascript" src="arrow.js"></script>
     <script>
         // *** WORK TILL COMPLETION ***
         //
@@ -49,7 +49,9 @@
         //
         // ** Refactoring **
         // - `new Point(0, height / 2)`
-        // - `rad_to_deg`
+        // - Fix padding
+        // - Fix dotted and dashed squiggly lines.
+        // - Probably other stuff too.
 
         let drag = null;
         let curve = 0;
@@ -63,6 +65,7 @@
                 this.y = y;
                 this.width = 64;
                 this.height = 64;
+                this.radius = 16;
                 this.svg = document.createElement("div");
                 this.svg.classList.add("box");
                 this.redraw();
@@ -75,6 +78,10 @@
                 document.body.appendChild(this.svg);
             }
 
+            get origin() {
+                return new Point(this.x, this.y);
+            }
+
             redraw() {
                 this.svg.style.left = `${this.x - this.width / 2}px`;
                 this.svg.style.top = `${this.y - this.height / 2}px`;
@@ -83,7 +90,7 @@
             }
         }
 
-        class Arrow {
+        class Arrow2 {
             constructor(source, target) {
                 this.source = source;
                 this.target = target;
@@ -781,7 +788,16 @@
         document.addEventListener("DOMContentLoaded", () => {
             const source = new Shape(64, 240);
             const target = new Shape(640, 240);
-            const arrow = new Arrow(source, target);
+            // const arrow2 = new Arrow2(source, target);
+
+            const arrow = new Arrow(source, target, new ArrowStyle());
+            arrow.style.heads = ["epi"];
+            arrow.style.tails = ["mono"];
+            arrow.style.level = 5;
+            arrow.style.dash_style = CONSTANTS.ARROW_DASH_STYLE.DOTTED;
+            arrow.style.body_style = CONSTANTS.ARROW_BODY_STYLE.SQUIGGLY;
+            arrow.redraw();
+            document.body.appendChild(arrow.svg.element);
 
             window.addEventListener("mousemove", (event) => {
                 if (drag !== null) {
@@ -795,21 +811,21 @@
 
             window.addEventListener("wheel", (event) => {
                 event.preventDefault();
-                curve += event.deltaY;
+                arrow.style.curve += event.deltaY;
                 arrow.redraw();
             }, { passive: false });
 
             window.addEventListener("keydown", (event) => {
                 let redraw = false;
                 if (event.key === "ArrowLeft") {
-                    --level;
+                    --arrow.style.level;
                     redraw = true;
                 }
                 if (event.key === "ArrowRight") {
-                    ++level;
+                    ++arrow.style.level;
                     redraw = true;
                 }
-                level = Math.max(1, level);
+                arrow.style.level = Math.max(1, arrow.style.level);
                 if (redraw) {
                     arrow.redraw();
                 }
