--- a/src/arrow.html
+++ b/src/arrow.html
@@ -30,18 +30,18 @@
     <script>
         // *** WORK TILL COMPLETION ***
         //
-        // ** Critical features & Bugs **
+        // ** Integration **
         // - Make sure we can draw pretty arrows between arrows.
         // - Make smooth transitions from small edges to long edges (scaling heads, etc.).
-        // - Make label handling work well when edge is very small (and when the label contains the edge).
-        // - Make n-cells draw well even for high n.
-        // - Test and make sure everything looks pixel perfect. Set up a test rig.
-        // - Cropping of background.
-        // - Add mask for "none" tail for squiggly lines (could maybe use the existing mask background).
-        //
-        // ** quiver integration **
         // - Use the new arrow library for quiver.
         // - Figure out how to export appropriate tikz-cd code for curved edges.
+        //
+        // ** Bugs **
+        // - Make label handling work well when edge is very small (and when the label (offset=left/right) contains the edge). At the moment, there are NaN errors, etc. Label doesn't crop head/tail, for instance.
+        // - Make n-cells draw well even for high n.
+        // - Test and make sure everything looks pixel perfect. Set up a test rig.
+        // - Cropping of background (gets cropped inappropriately in edge cases at the moment).
+        // - Add mask for "none" tail for squiggly lines (could maybe use the existing mask background).
 
         let drag = null;
 
