--- a/src/arrow.html
+++ b/src/arrow.html
@@ -35,6 +35,8 @@
         // - Make smooth transitions from small edges to long edges (scaling heads, etc.).
         // - Use the new arrow library for quiver.
         // - Figure out how to export appropriate tikz-cd code for curved edges.
+        // - Make sure that curves are disabled when outputting for adjunctions, etc.
+        // - Make sure we're going to load old diagrams with level properly.
         //
         // ** Bugs **
         // - Make label handling work well when edge is very small (and when the label (offset=left/right) contains the edge). At the moment, there are NaN errors, etc. Label doesn't crop head/tail, for instance.
@@ -81,7 +83,7 @@
             const arrow = new Arrow(source, target, new ArrowStyle(), new Label("Hello"));
             arrow.style.heads = ["epi"];
             arrow.style.tails = ["mono"];
-            arrow.style.level = 5;
+            arrow.style.level = 1;
             // arrow.style.dash_style = CONSTANTS.ARROW_DASH_STYLE.DASHED;
             arrow.style.body_style = CONSTANTS.ARROW_BODY_STYLE.PROARROW;
             arrow.label.alignment = CONSTANTS.LABEL_ALIGNMENT.LEFT;
