Integrate arrow styles

--- a/src/arrow.html
+++ b/src/arrow.html
@@ -84,7 +84,7 @@
             arrow.style.heads = ["epi"];
             arrow.style.tails = ["mono"];
             arrow.style.level = 1;
-            // arrow.style.dash_style = CONSTANTS.ARROW_DASH_STYLE.DASHED;
+            arrow.style.dash_style = CONSTANTS.ARROW_DASH_STYLE.DASHED;
             arrow.style.body_style = CONSTANTS.ARROW_BODY_STYLE.PROARROW;
             arrow.label.alignment = CONSTANTS.LABEL_ALIGNMENT.LEFT;
             arrow.redraw();
